# Portfolio_Screener

./: .gitignore  Feature_engineering.ipynb  LICENSE  README.md  app.py  cluster.ipynb  missing.txt  pipeline.py  pyproject.toml  requirements.txt  risk_metric.py  setup.py
Config/: .env
Data/Raw_data/: fundamental_metrics.csv  risk_return_metrics.csv
Scripts/Src/Utils/: formulas.py
Scripts/Src/db/: connection.py
Scripts/Src/fetcher/: fdfa.py  ingest_fundamental_data.py
artifacts/: fundamental.csv  metadata.csv  preprocessed.pkl  technical.csv
artifacts/candidate_values/07_22_2025_23_45_08/: best_k_vals.parquet
artifacts/cluster_validation/07_22_2025_23_45_08/: model.parquet
artifacts/final_data/: merged_final_data.parquet  transformed_final_data.parquet
artifacts/merged_data/: merged.parquet
artifacts/transformed_data/: transformed.parquet
data/Raw_data/: S&p_500.csv  fundamental_metrics.csv  metadata_us_companies.csv  risk_return_metrics.csv  ~$ustering Analysis in Equity Portfolio Construction.odt
notebooks/: screener_project_.ipynb
src/: config.py  exception.py  logger.py  utils.py
src/cluster/: data_loader.py  preprocess.py
src/components/: cluster_lable_cent_rank.py  cluster_models.py  cluster_validation.py  custom_transform.py  data_ingestion.py  data_transformation.py  feature_selector.py  ranking_engine.py
src/etl/: data_ingest.py  main.py  risk_metric.py
src/etl/Utils/: general.py
src/etl/db/: Schema.py
src/etl/fetcher/: ingest_fundamental_data.py  (+1 more)
src/pipeline/: cluster_pipeline.py  label_rank_pipeline.py
(+1 files in other folders)
