[build-system]
# use the modern PEP 517 build backend
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-portfolio"
version = "0.1.0"
description = "Clustering-based stock bucketization pipeline"

# list any runtime dependencies here (e.g. pandas, scikit-learn, etc)
dependencies = [
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "numpy>=1.21",
    "Matplotlib>=3.5",
    "seaborn>=0.11",
    "yfinance>=0.1.70"
]

[tool.setuptools.packages.find]
# look for Python packages under src/
where = ["src"]
